--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<!-- Coding by CodingNepal | www.codingnepalweb.com-->
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title> Login and Registration Form in HTML & CSS | CodingLab </title>
-    <link rel="stylesheet" type="text/css" href="LoginPage.css">
-    <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Login and Registration Form in HTML & CSS | CodingLab</title>
+  <link rel="stylesheet" type="text/css" href="LoginPage.css">
+  <!-- Fontawesome CDN Link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   </head>
+</head>
 <body>
   <div class="container">
     <input type="checkbox" id="flip">
@@ -23,7 +21,7 @@
         </div>
       </div>
       <div class="back">
-        <!--<img class="backImg" src="images/backImg.jpg" alt="">-->
+
         <div class="text">
           <span class="text-1">Complete miles of journey <br> with one step</span>
           <span class="text-2">Let's get started</span>
@@ -31,9 +29,9 @@
       </div>
     </div>
     <div class="forms">
-        <div class="form-content">
-          <div class="login-form">
-            <div class="title">Login</div>
+      <div class="form-content">
+        <div class="login-form">
+          <div class="title">Login</div>
           <form action="#">
             <div class="input-boxes">
               <div class="input-box">
@@ -45,31 +43,17 @@
                 <input type="password" placeholder="Enter your password" required>
               </div>
               <div class="text"><a href="#">Forgot password?</a></div>
-              <!-- Inside the login-form div -->
-<form action="#">
-    <!-- ... (existing code) ... -->
-    <div class="input-box">
-      <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
-    </div>
-    <!-- ... (existing code) ... -->
-  </form>
-  
+
               <div class="button input-box">
                 <input type="submit" value="Submit">
               </div>
               <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
-              <div class="social-login">
-                <button class="google-btn">Login with Google</button>
-                <button class="facebook-btn">Login with Facebook</button>
-                <button class="twitter-btn">Login with Twitter</button>
-              </div>
-              
             </div>
-        </form>
-      </div>
+          </form>
+        </div>
         <div class="signup-form">
           <div class="title">Signup</div>
-        <form action="#">
+          <form action="#">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-user"></i>
@@ -88,28 +72,13 @@
                 <input type="password" placeholder="Confirm your password" required>
               </div>
               <div class="button input-box">
-                <input type="submit" value="Choose The Subscription">
-              </div>
-              <div class="input-box">
-                <i class="fas fa-dollar-sign"></i>
-               <!-- Inside the signup-form div -->
-                <div class="input-box select-box">
-                    <i class="fas fa-dollar-sign"></i>
-                    <select>
-                    <option value="monthly">Monthly Subscription ($0.99)</option>
-                    <option value="yearly">Yearly Subscription ($10)</option>
-                    </select>
-                </div>
-  
-              </div>
-              <div class="button input-box">
-                <input type="submit" value="Place Order">
+                <input type="submit" value="Submit">
               </div>
               <div class="text sign-up-text">Already have an account? <label for="flip">Login now</label></div>
             </div>
-      </form>
-    </div>
-    </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </body>
