--- a/index.html
+++ b/index.html
@@ -250,8 +250,6 @@
 </div>
 
 <style>
-    /* Add this to your existing style tag or CSS file */
-
     .testimonials-section {
         background: #000000;
         color: #fff;
@@ -277,7 +275,7 @@
         background: #49494964;
         padding: 20px;
         border-radius: 10px;
-        width: calc(30% - 20px); /* Adjust the width as needed */
+        width: calc(30% - 20px);
         margin-bottom: 20px;
         text-align: center;
     }
@@ -311,13 +309,13 @@
     /* Media Queries for responsiveness */
     @media (max-width: 768px) {
         .testimonial {
-            width: calc(50% - 20px); /* Adjust the width for smaller screens */
+            width: calc(50% - 20px);
         }
     }
 
     @media (max-width: 576px) {
         .testimonial {
-            width: 100%; /* Full width for even smaller screens */
+            width: 100%;
         }
     }
 </style>
@@ -375,10 +373,8 @@ WhizzCryption Copyright © 2023 Inferno - All rights reserved
 <script>
   $(document).ready(function() {
     $('.navbar-right a').on('click', function() {
-      // Remove the 'active' class from all links
       $('.navbar-right a').removeClass('active');
 
-      // Add the 'active' class to the clicked link
       $(this).addClass('active');
     });
   });
@@ -393,17 +389,14 @@ WhizzCryption Copyright © 2023 Inferno - All rights reserved
 
 <script>
   $(document).ready(function() {
-    // Smooth scroll to the premium section when clicking on the "Premium" link
     $('.navbar-right a[href="#premium-section"]').on('click', function(event) {
       event.preventDefault();
 
-      // Get the target section's offset
       var targetOffset = $($(this).attr('href')).offset().top;
 
-      // Animate the scroll to the target section
       $('html, body').animate({
         scrollTop: targetOffset
-      }, 1000); // Adjust the duration as needed
+      }, 1000); 
     });
   });
 </script>
