--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
       <div class="navbar-right">
           <a href="index.html"><h3>HOME</h3></a>
-          <a href="#Premium"><h3>OUR PLANS</h3></a>
+          <!-- <a href="#Premium"><h3>OUR PLANS</h3></a> -->
           <a href="#outerbox"><h3>TESTIMONIALS</h3></a>
           <a href="LoginPage.html"><h3>CONNECT</h3></a>
       </div>
@@ -92,73 +92,7 @@
         <a href="register.html" class="cta-button">Sign Up Now</a>
     </section>
 
-    <div id="Premium">
-        <div class="PremiumQuote">
-            <h2>Our Pricing Plans</h2>
-            <h1>"Unlock Extraordinary: Elevate with Premium." </h1>
-        </div>
-        <div class="wrapper">
 
-          
-
-            <input type="radio" name="slider" id="tab-1">
-            <input type="radio" name="slider" id="tab-2" checked>
-            <input type="radio" name="slider" id="tab-3">
-            <header>
-                <label for="tab-1" class="tab-1">Basic</label>
-                <label for="tab-2" class="tab-2">Professional</label>
-                <label for="tab-3" class="tab-3">Team</label>
-                <div class="slider"></div>
-            </header>
-            <div class="card-area">
-                <div class="cards">
-                    <div class="row row-1">
-                        <div class="price-details">
-                            <span class="price">0</span>
-                            <p>For Basic Use</p>
-                        </div>
-                        <ul class="features">
-                            <li><i class="fas fa-check"></i><span>Key Valid for 15 Mins</span></li>
-                            <li><i class="fas fa-check"></i><span>File Upload Limit of 15 MB</span></li>
-                            <li><i class="fas fa-check"></i><span>One FREE Domain Registration .com and .np extensions
-                                    only</span></li>
-                            <li><i class="fas fa-check"></i><span>Unlimited Email Accounts & Databases</span></li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <div class="price-details">
-                            <span class="price">0.99</span>
-                            <p>For professional use</p>
-                        </div>
-                        <ul class="features">
-                            <li><i class="fas fa-check"></i><span>Key Valid for 1 hour</span></li>
-                            <li><i class="fas fa-check"></i><span>File Upload Limit of 100 MB</span></li>
-                            <li><i class="fas fa-check"></i><span>Five FREE Domain Registration .com and .np extensions
-                                    only</span></li>
-                            <li><i class="fas fa-check"></i><span>Unlimited Email Accounts & Databases</span></li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <div class="price-details">
-                            <span class="price">1.33</span>
-                            <p>For team collaboration</p>
-                        </div>
-                        <ul class="features">
-                            <li><i class="fas fa-check"></i><span>Key Valid for 24 hours</span></li>
-                            <li><i class="fas fa-check"></i><span>File Upload Limit of 1 GB</span></li>
-                            <li><i class="fas fa-check"></i><span>Two FREE Domain Registration .com and .np extensions
-                                    only</span></li>
-                            <li><i class="fas fa-check"></i><span>Unlimited Email Accounts & Databases</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <button>Choose plan</button>
-        </div>
-    </div>
-         
-
-<!-- Footer section -->
 <!-- Testimonials Section -->
 
 <div id="outerbox">
